header button still not there on tablet, stop fiddling

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -303,6 +303,13 @@ footer .copyright {
     color: white;
   }
 
+  .button {
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+  }
+
   #sign-up-section {
     display: flex;
     align-items: center;
